--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   cloud_firestore: ^0.8.2
   firebase_auth: ^0.6.6
   firebase_database: ^1.0.5
+  firebase_ml_vision: ^0.4.0+1
+  camera: ^0.3.0+3
+  image_picker: 0.4.5
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,11 +47,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/flutter-image.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
